--- a/frontend/src/ui/GameCapsule.css
+++ b/frontend/src/ui/GameCapsule.css
@@ -27,12 +27,14 @@
     } }
 
 .game-capsule {
+    background-color: var(--bg-color);
+    color: var(--text-color);
     width: 300px;
     /* Increased width to accommodate larger images */
     border-radius: 10px;
     overflow: hidden;
     box-shadow: var(--card-shadow);
-    background: linear-gradient(145deg, #1e1e1e, #2a2a2a);
+    background: var(--bg-color);
     margin: 20px;
     transition: transform 0.3s ease;
     display: flex;
