--- a/frontend/src/ui/NavigationBar.css
+++ b/frontend/src/ui/NavigationBar.css
@@ -32,6 +32,7 @@
 .nav-button:hover {
     background-color: var(--nav-border);
 }
+
 .nav-button.sign-in {
     background-color: transparent;
     color: white;
@@ -95,5 +96,4 @@
     .navbar-right {
         width: 100%;
         justify-content: center;
-    } 
-}
+    } }
