⦁	fixed a bug where "failed to fetch games" appeared before the user signed it ⦁	removed some vulgar language (lol) ⦁	removed the "backend says" messages ⦁	removed an error message that said "Not logged in" because there is a "Please log in to view your game library message" ⦁	added guard in app.js so that no requests are sent to the api until a user is signed in ⦁	sign out function implemented

--- a/frontend/src/ui/NavigationBar.css
+++ b/frontend/src/ui/NavigationBar.css
@@ -45,11 +45,22 @@
     cursor: pointer;
 }
 
+.nav-user {
+    cursor: pointer;
+    text-align: center;
+}
+
 .avatar-image {
     width: 40px;
     height: 40px;
     border-radius: 50%;
     transition: transform 0.2s ease; 
+}
+
+.avatar-username {
+    margin-top: 4px;
+    font-size: 0.9rem;
+    color: var(--text-color);
 }
 
 .avatar-button:hover .avatar-image {
